kubeadm/terraform/master.tf
# Master Nodes - Private IPs only
resource "azurerm_network_interface" "master_nic" {
  count               = var.master_count
  name                = "k8s-master-${count.index + 1}-nic"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.k8s_subnet.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_network_interface_security_group_association" "master_nsg_assoc" {
  count                     = var.master_count
  network_interface_id      = azurerm_network_interface.master_nic[count.index].id
  network_security_group_id = azurerm_network_security_group.master_nsg.id
}

resource "azurerm_linux_virtual_machine" "master" {
  count               = var.master_count
  name                = "k8s-master-${count.index + 1}"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  size                = var.master_vm_size
  admin_username      = var.admin_username
  network_interface_ids = [
    azurerm_network_interface.master_nic[count.index].id
  ]

  admin_ssh_key {
    username   = var.admin_username
    public_key = file(var.ssh_public_key_path)
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
    disk_size_gb         = 30
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts-gen2"
    version   = "latest"
  }

  custom_data = base64encode(templatefile("${path.module}/cloud-init.yaml", {
    hostname = "k8s-master-${count.index + 1}"
  }))

  tags = {
    Environment = "Kubernetes"
    Role        = "Master"
  }
}
